# first-crud

./: pyproject.toml
backend/: database.py  main.py  models.py  router.py  schemas.py
